Found a bug where visibility: hidden was causing copy and paste not to work - what tha'?

--- a/css/style.css
+++ b/css/style.css
@@ -427,5 +427,7 @@ body.preview #source select {
 }
 
 textarea {
-  visibility: hidden;
+  opacity: 0;
+  -moz-opacity: 0;
+  filter:alpha(opacity=0);
 }
